mczernek-exchange-application/kubefiles/currency.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currency
spec:
  selector:
    matchLabels:
      app: currency
  replicas: 1
  template:
    metadata:
      labels:
        app: currency
      annotations:
          sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: currency
          image: quay.io/psolarvi/do328-app-currencies:0.1.1
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: currency
  name: currency
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: currency
