mczernek-exchange-application/kubefiles/history.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: history
spec:
  selector:
    matchLabels:
      app: history
  replicas: 1
  template:
    metadata:
      labels:
        app: history
      annotations:
          sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: history
          image: quay.io/mczernek/history:v2
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: history
  name: history
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: history
