mczernek-exchange-application/kubefiles/istio-exchange.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: exchange-gw
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: exchange-vservice
spec:
  hosts:
  - "*"
  gateways:
  - exchange-gw
  http:
  - match:
    - uri:
        prefix: /exchange
    rewrite:
      uri: /
    route:
    - destination:
        host: exchange
        port:
          number: 8080
