mczernek-exchange-application/kubefiles/istio-frontend.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: frontend-gw
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-vservice
spec:
  hosts:
  - "*"
  gateways:
  - frontend-gw
  http:
  - match:
    - uri:
        prefix: /frontend
    rewrite:
      uri: /frontend
    route:
    - destination:
        host: frontend
        port:
          number: 3000
